--- a/app/src/main/res/layout/fragment_add_contact.xml
+++ b/app/src/main/res/layout/fragment_add_contact.xml
@@ -76,32 +76,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
-            android:id="@+id/imageView"
-            android:layout_width="232dp"
-            android:layout_height="217dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/outline_image_black_48"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/relativeLayout2"
+            android:layout_width="326dp"
+            android:layout_height="230dp"
+            android:layout_marginBottom="450dp"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/imageView2"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="@+id/imageView2"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView2"/>
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="410dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="30dp"
             android:fontFamily="@font/font"
             android:paddingStart="30dp"
@@ -113,7 +105,7 @@
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
@@ -209,7 +201,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView3"
             app:layout_constraintVertical_bias="0.0" />
-
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
