--- a/app/src/main/res/layout/fragment_contactlist.xml
+++ b/app/src/main/res/layout/fragment_contactlist.xml
@@ -38,6 +38,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <ImageButton
+            android:id="@+id/addContact"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@drawable/shape" />
@@ -62,82 +63,28 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.127" />
 
-    <FrameLayout
-        android:layout_marginTop="20dp"
-        android:id="@+id/frame"
-        android:layout_width="350dp"
-        android:layout_height="41dp"
-        android:background="@drawable/favouritelist"
-        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/select"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textSize="22sp"
-                android:gravity="center"
-                android:background="@drawable/contactlist" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/item1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Contact"
-                android:textSize="22sp"
-                android:textColor="#1a1a1a" />
-
-            <TextView
-                android:id="@+id/item2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="22sp"
-                android:textColor="#1a1a1a"
-                android:text="Favourite" />
-
-        </LinearLayout>
-    </FrameLayout>
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frame"
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
         app:layout_constraintVertical_bias="1.0">
 
         <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/pager"
             android:layout_width="420dp"
             android:layout_height="515dp"
             android:layout_alignParentTop="true"
             android:layout_marginTop="20dp"
             android:background="@drawable/viewpager"
+            android:paddingStart="30dp"
+            android:paddingTop="30dp"
+            android:paddingEnd="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.555"
