--- a/app/src/main/res/layout/fragment_contact_list_tab.xml
+++ b/app/src/main/res/layout/fragment_contact_list_tab.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,6 +9,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ContactList"
         android:layout_width="match_parent"
-        android:layout_height="683dp"
-        android:layout_marginTop="50dp" />
-</FrameLayout>
+        android:layout_height="match_parent"
+        tools:listitem="@layout/list_item_contacts"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
