--- a/app/src/main/res/layout/fragment_favourite_list_tab.xml
+++ b/app/src/main/res/layout/fragment_favourite_list_tab.xml
@@ -18,6 +18,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="683dp"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="50dp"
+        tools:listitem="@layout/list_item_contacts"/>
 
 </FrameLayout>
