--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -6,17 +6,21 @@
     app:startDestination="@id/contactList">
 
     <fragment
-        android:id="@+id/contactList"
-        android:name="com.example.contactappnextget.fragments.ContactList"
-        android:label="fragment_contactlist"
-        tools:layout="@layout/fragment_contactlist" >
+            android:id="@+id/contactList"
+            android:name="com.example.contactappnextget.fragments.ContactList"
+            android:label="fragment_contactlist"
+            tools:layout="@layout/fragment_contactlist">
         <action
-            android:id="@+id/navigate_to_addContact"
-            app:destination="@id/addContact"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right" />
+                android:id="@+id/navigate_to_addContact"
+                app:destination="@id/addContact"
+                app:enterAnim="@anim/from_right"
+                app:exitAnim="@anim/to_left"
+                app:popEnterAnim="@anim/from_left"
+                app:popExitAnim="@anim/to_right"/>
+        <action android:id="@+id/action_contactList_to_detailing" app:destination="@id/detailing"/>
+        <argument android:name="name" app:argType="string"/>
+        <argument android:name="Address" app:argType="string"/>
+        <argument android:name="Phone" app:argType="string"/>
     </fragment>
     <fragment
         android:id="@+id/addContact"
@@ -28,5 +32,19 @@
             app:destination="@id/contactList"
             app:enterAnim="@anim/from_left"
             app:exitAnim="@anim/to_right"/>
+    </fragment>
+    <fragment android:id="@+id/detailing" android:name="com.example.contactappnextget.fragments.Detailing"
+              android:label="fragment_detailing" tools:layout="@layout/fragment_detailing">
+        <action android:id="@+id/action_detailing_to_contactList" app:destination="@id/contactList"/>
+        <argument android:name="name" app:argType="string"/>
+        <argument android:name="Address" app:argType="string"/>
+        <argument android:name="Phone" app:argType="string"/>
+        <action android:id="@+id/action_detailing_to_editContact" app:destination="@id/editContact"/>
+    </fragment>
+    <fragment android:id="@+id/editContact" android:name="com.example.contactappnextget.fragments.EditContact"
+              android:label="fragment_edit_contact" tools:layout="@layout/fragment_edit_contact">
+        <argument android:name="name" app:argType="string"/>
+        <argument android:name="Phone" app:argType="string"/>
+        <argument android:name="Address" app:argType="string"/>
     </fragment>
 </navigation>
