--- a/app/src/main/res/layout/fragment_add_contact.xml
+++ b/app/src/main/res/layout/fragment_add_contact.xml
@@ -8,20 +8,19 @@
                                                    tools:context=".fragments.AddContact">
 
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/roundedImageView"
-        android:src="@drawable/user"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.027" />
+    <ImageView
+            android:id="@+id/roundedImageView"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/user" android:layout_marginTop="28dp"
+            app:layout_constraintHorizontal_bias="0.498"/>
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:layout_width="30dp"
+        android:id="@+id/setImage"
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
         android:src="@drawable/baseline_photo_camera_black_48"
