--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -21,6 +21,7 @@
         <argument android:name="name" app:argType="string"/>
         <argument android:name="Address" app:argType="string"/>
         <argument android:name="Phone" app:argType="string"/>
+        <argument android:name="image" app:argType="string"/>
     </fragment>
     <fragment
         android:id="@+id/addContact"
@@ -40,11 +41,14 @@
         <argument android:name="Address" app:argType="string"/>
         <argument android:name="Phone" app:argType="string"/>
         <action android:id="@+id/action_detailing_to_editContact" app:destination="@id/editContact"/>
+        <argument android:name="image" app:argType="string"/>
     </fragment>
     <fragment android:id="@+id/editContact" android:name="com.example.contactappnextget.fragments.EditContact"
               android:label="fragment_edit_contact" tools:layout="@layout/fragment_edit_contact">
         <argument android:name="name" app:argType="string"/>
         <argument android:name="Phone" app:argType="string"/>
         <argument android:name="Address" app:argType="string"/>
+        <argument android:name="image" app:argType="string"/>
+        <action android:id="@+id/action_editContact_to_detailing" app:destination="@id/detailing"/>
     </fragment>
 </navigation>
