--- a/app/src/main/res/layout/fragment_add_contact.xml
+++ b/app/src/main/res/layout/fragment_add_contact.xml
@@ -3,7 +3,8 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="match_parent" xmlns:mask="http://schemas.android.com/apk/res-auto"
+                                                   android:layout_height="match_parent"
+                                                   xmlns:mask="http://schemas.android.com/apk/res-auto"
                                                    android:background="#161E27"
                                                    tools:context=".fragments.AddContact">
 
