--- a/app/src/main/res/layout/fragment_detailing.xml
+++ b/app/src/main/res/layout/fragment_detailing.xml
@@ -17,6 +17,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+    <ImageView
+            android:id="@+id/rate"
+            android:layout_width="35dp"
+            android:layout_marginTop="16dp"
+            android:layout_height="35dp"
+            android:background="@drawable/ic_outline_star_outline_24" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/image" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.831"/>
     <TextView
             android:fontFamily="@font/font"
             android:id="@+id/name"
