--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -22,6 +22,8 @@
         <argument android:name="Address" app:argType="string"/>
         <argument android:name="Phone" app:argType="string"/>
         <argument android:name="image" app:argType="string"/>
+        <argument android:name="id" app:argType="integer"/>
+        <argument android:name="favourite" app:argType="integer"/>
     </fragment>
     <fragment
         android:id="@+id/addContact"
@@ -42,6 +44,8 @@
         <argument android:name="Phone" app:argType="string"/>
         <action android:id="@+id/action_detailing_to_editContact" app:destination="@id/editContact"/>
         <argument android:name="image" app:argType="string"/>
+        <argument android:name="id" app:argType="integer"/>
+        <argument android:name="favourite" app:argType="integer"/>
     </fragment>
     <fragment android:id="@+id/editContact" android:name="com.example.contactappnextget.fragments.EditContact"
               android:label="fragment_edit_contact" tools:layout="@layout/fragment_edit_contact">
@@ -50,5 +54,7 @@
         <argument android:name="Address" app:argType="string"/>
         <argument android:name="image" app:argType="string"/>
         <action android:id="@+id/action_editContact_to_detailing" app:destination="@id/detailing"/>
+        <argument android:name="id" app:argType="integer"/>
+        <argument android:name="favourite" app:argType="integer"/>
     </fragment>
 </navigation>
