--- a/app/src/main/res/layout/fragment_edit_contact.xml
+++ b/app/src/main/res/layout/fragment_edit_contact.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Image"
         app:layout_constraintVertical_bias="0.0" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <br.com.sapereaude.maskedEditText.MaskedEditText
         android:id="@+id/phone"
         android:layout_width="match_parent"
         android:layout_height="55dp"
@@ -62,7 +62,6 @@
         android:textColor="@color/white"
         android:alpha="0.7"
         android:inputType="number"
-        android:hint="1234567890"
         mask:mask="+7(###)###-##-##"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
